# homemagic

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  matter-connectedhomeip-candidate.yml  matter-controller-candidate.yml  matter-independent-reference.yml  matter-js-candidate.yml  matter-js-independent-reference.yml  matter-js-official-reference.yml  matter-js-sidecar-official-reference.yml  matter-js-sidecar-package.yml
config/: matter-controller-candidates.json  matter-js-candidate.json
crates/homemagic/: Cargo.toml
crates/homemagic-api/: Cargo.toml
crates/homemagic-api/src/: lib.rs
crates/homemagic-application/: Cargo.toml
crates/homemagic-application/src/: authentication.rs  automation_compiler.rs  automation_engine.rs  automation_evaluator.rs  automation_events.rs  automation_lifecycle.rs  automation_repository.rs  automation_runtime.rs  automation_scheduler.rs  automation_simulator.rs  command_service.rs  lib.rs  matter_administration.rs  matter_commands.rs  matter_controller.rs  matter_diagnostics.rs  matter_execution.rs  matter_fabric_workflow.rs  matter_inventory.rs  matter_node_workflow.rs  matter_projection.rs  matter_repository.rs  matter_subscription.rs  matter_subscription_repair.rs  memory.rs  policy.rs  ports.rs  reconciliation.rs  registry.rs
crates/homemagic-application/tests/: matter_projection_contract.rs
crates/homemagic-domain/: Cargo.toml
crates/homemagic-domain/src/: automation.rs  capability.rs  command.rs  configuration.rs  device.rs  event.rs  identity.rs  lib.rs  lifecycle.rs  observation.rs  repair.rs
crates/homemagic-domain/src/matter/: descriptor.rs  error.rs  event.rs  mod.rs  operation.rs  state.rs
crates/homemagic-domain/tests/: persisted_contracts.rs
crates/homemagic-matter/: Cargo.toml
crates/homemagic-matter/src/: barrier.rs  clock.rs  command.rs  fixture.rs  lib.rs  script.rs  sidecar_control.rs  sidecar_protocol.rs  sidecar_supervisor.rs  simulator.rs
crates/homemagic-matter/tests/: controller_contract.rs  sidecar_control.rs  sidecar_protocol.rs  sidecar_supervisor.rs
crates/homemagic-matter/tests/fixtures/: light-trace-v1.json  light-trace-v1.sha256
crates/homemagic-matter/tests/support/: fake_sidecar.rs
crates/homemagic-secrets/: Cargo.toml
crates/homemagic-secrets/src/: lib.rs
crates/homemagic-shelly/: Cargo.toml
crates/homemagic-shelly/src/: auth.rs  command.rs  lib.rs  notification.rs  session.rs  websocket.rs
crates/homemagic-shelly/tests/fixtures/: auth_challenge_legacy.txt  auth_challenge_modern.txt  config.json  device_info.json  notify_event.json  notify_full_status.json  notify_malformed.json  notify_status_partial.json  status.json
crates/homemagic-storage/: Cargo.toml
crates/homemagic-storage/migrations/: 0001_initial.sql  0002_command_control_plane.sql  0003_automation_engine.sql  0004_automation_event_runtime.sql  0005_general_event_subjects.sql  0006_matter_controller.sql  0007_matter_unlock_bindings.sql  0008_matter_operation_bindings.sql  0009_matter_fabric_staging.sql  0010_matter_operation_node_results.sql
crates/homemagic-storage/src/: automation_repository.rs  backup.rs  command_repository.rs  lib.rs  matter_repository.rs  migrations.rs  repository.rs
crates/homemagic-storage/tests/: actor_authentication_contract.rs  automation_repository_contract.rs  backup_restore.rs  command_repository_contract.rs  command_service_contract.rs  complete_projection.rs  matter_repository_contract.rs  migration_fixtures.rs  repository_contract.rs  transaction_contract.rs
crates/homemagic-storage/tests/fixtures/: schema-v0.sql  schema-v1-seed.sql  schema-v2.sql  schema-v3.sql  schema-v5.sql  schema-v7.sql  schema-v8.sql  schema-v9.sql
crates/homemagic/src/: main.rs
docs/: roadmap.md
docs/adr/: 0001-rust-modular-monolith.md  0002-capability-oriented-domain-model.md  0003-rpc-first-api-and-mcp-adapter.md  0004-agent-authored-automations.md  0005-rust-and-ffi-policy.md  0006-shelly-first-vertical-slice.md  0007-sqlite-schema-migrations-and-backups.md  0008-platform-secret-stores-and-headless-vault.md  0009-current-state-and-event-retention.md  0010-managed-device-sessions-and-notification-gaps.md  0011-bounded-runtime-scheduling-and-recovery.md  0012-json-rpc-websocket-event-subscriptions.md  0013-authenticate-rpc-clients-as-durable-actors.md  0014-persist-idempotent-command-lifecycles.md  0015-evaluate-default-deny-risk-policy.md  0016-keep-json-rpc-as-command-transport.md  0017-version-automation-documents-and-plans.md  0018-use-deterministic-automation-time-and-scheduling.md  0019-govern-automation-activation-with-safety-profiles.md  0020-retain-automation-evidence-independently.md  0021-persist-automation-group-continuations.md  0022-persist-automation-command-attempts.md  0023-scope-durable-automation-timers.md  0024-persist-continuous-condition-intervals.md  0025-propagate-automation-causation.md  0026-checkpoint-active-automation-events.md  0027-enforce-durable-run-mode-admission.md  0028-orchestrate-bounded-automation-passes.md  0029-require-explicit-schedule-catch-up.md  0030-centralize-authenticated-automation-lifecycle.md  0031-generate-automation-envelope-fields-server-side.md  0032-stream-automation-transitions-as-general-events.md  0033-isolate-matter-behind-controller-port.md  0034-project-matter-through-capability-rules.md  0035-require-interactive-unlock-authorization.md  0036-converge-state-setting-commands.md  0037-own-and-port-matter-fabric-secrets.md  0038-start-matter-on-network-and-fix-evaluation.md  (+5 more)
docs/api/: automation-ir.md  json-rpc.md
scripts/: build-matter-js-sidecar.sh  check-matter-boundaries.sh  check-matter-candidate-pins.sh  hardware-command-smoke.py  rpc-command.py  run-connectedhomeip-candidate.sh  run-matter-controller-candidate.sh  run-matter-independent-reference.sh  run-matter-js-candidate.sh  run-matter-js-independent-reference.sh  run-matter-js-official-reference.sh  scan-secrets.sh
spikes/matter-controller-rust-matc/: Cargo.toml  README.md  rs-matter-reference-no-mdns.patch
spikes/matter-controller-rust-matc/src/: main.rs
(+163 files in other folders)
