[workspace]
resolver = "2"
members = [
  "crates/homemagic-api",
  "crates/homemagic-application",
  "crates/homemagic-domain",
  "crates/homemagic-secrets",
  "crates/homemagic-shelly",
  "crates/homemagic-storage",
  "crates/homemagic",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
chacha20poly1305 = { version = "0.11.0", features = ["zeroize"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "0.3", features = ["sink"] }
jsonschema = { version = "0.47.0", default-features = false }
mdns-sd = "0.17"
proptest = "1.11.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.10.2"
rusqlite = { version = "=0.39.0", default-features = false, features = ["backup", "bundled", "chrono", "serde_json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4", "v5"] }
zeroize = { version = "1.8", features = ["derive"] }

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
missing_docs = "warn"
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "warn", priority = 5 }
unwrap_used = "deny"
expect_used = "deny"
