[package]
name = "homemagic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
homemagic-application = { path = "../homemagic-application" }
homemagic-domain = { path = "../homemagic-domain" }
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
homemagic-storage = { path = "../homemagic-storage" }
tempfile.workspace = true
tokio-tungstenite.workspace = true

[lints]
workspace = true
