[package]
name = "homemagic-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
homemagic-domain = { path = "../homemagic-domain" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

[lints]
workspace = true
