[package]
name = "homemagic-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
chrono.workspace = true
homemagic-domain = { path = "../homemagic-domain" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

[lints]
workspace = true
