[package]
name = "homemagic-matter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
sidecar-fixture = []

[[bin]]
name = "homemagic-matter-fake-sidecar"
path = "tests/support/fake_sidecar.rs"
required-features = ["sidecar-fixture"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
homemagic-application = { path = "../homemagic-application" }
homemagic-domain = { path = "../homemagic-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
sha2.workspace = true
tokio.workspace = true

[lints]
workspace = true
