[package]
name = "homemagic-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chacha20poly1305.workspace = true
homemagic-application = { path = "../homemagic-application" }
homemagic-domain = { path = "../homemagic-domain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
rustix = { version = "1.1.4", features = ["process"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
rustix = { version = "1.1.4", features = ["process"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
