[package]
name = "homemagic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
homemagic-api = { path = "../homemagic-api" }
homemagic-application = { path = "../homemagic-application" }
homemagic-shelly = { path = "../homemagic-shelly" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
