[package]
name = "homemagic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
chrono.workspace = true
homemagic-api = { path = "../homemagic-api" }
homemagic-application = { path = "../homemagic-application" }
homemagic-domain = { path = "../homemagic-domain" }
homemagic-shelly = { path = "../homemagic-shelly" }
homemagic-secrets = { path = "../homemagic-secrets" }
homemagic-storage = { path = "../homemagic-storage" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
